# django-online-store

./: .env  .gitignore  README.md  mypy.ini  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: create_test_data.py  load_test_data.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: contacts.html  home.html
online_store/: asgi.py  settings.py  urls.py  wsgi.py
